ex4/testdata/typechecker/error/BinopTest-err9.java
class BinopTest {
	public static void main(String[] a){
            boolean b;
            b = false && 87; // TE
	}
}

